// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`openSwapDepositChannel creates channel and stores it in the database 1`] = `
[
  [
    {
      "ccmParams": undefined,
      "destAddress": "5FAGoHvkBsUMnoD3W95JoVTvT8jgeFpjhFK8W73memyGBcBd",
      "destAsset": "DOT",
      "destChain": "Polkadot",
      "expectedDepositAmount": "777",
      "srcAsset": "FLIP",
      "srcChain": "Ethereum",
    },
    {
      "url": "",
    },
    "perseverance",
  ],
]
`;

exports[`openSwapDepositChannel creates channel and stores it in the database 2`] = `
{
  "brokerCommissionBps": 0,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 888n,
  "createdAt": Any<ClockDate>,
  "depositAddress": "address",
  "destAddress": "5FAGoHvkBsUMnoD3W95JoVTvT8jgeFpjhFK8W73memyGBcBd",
  "destAsset": "Dot",
  "estimatedExpiryAt": 2023-11-09T12:55:00.000Z,
  "expectedDepositAmount": "777",
  "expiryBlock": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 123,
  "maxBoostFeeBps": 0,
  "openedThroughBackend": true,
  "openingFeePaid": "100",
  "srcAsset": "Flip",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 1000n,
}
`;

exports[`openSwapDepositChannel creates channel with boost fee and stores it in the database 1`] = `
[
  [
    {
      "ccmParams": undefined,
      "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
      "destAsset": "USDC",
      "destChain": "Ethereum",
      "expectedDepositAmount": "10101010",
      "maxBoostFeeBps": 100,
      "srcAsset": "FLIP",
      "srcChain": "Ethereum",
    },
    {
      "url": "",
    },
    "perseverance",
  ],
]
`;

exports[`openSwapDepositChannel creates channel with boost fee and stores it in the database 2`] = `
{
  "brokerCommissionBps": 0,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 909n,
  "createdAt": Any<ClockDate>,
  "depositAddress": "address",
  "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
  "destAsset": "Usdc",
  "estimatedExpiryAt": 2023-11-09T12:55:00.000Z,
  "expectedDepositAmount": "10101010",
  "expiryBlock": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 123,
  "maxBoostFeeBps": 100,
  "openedThroughBackend": true,
  "openingFeePaid": "0",
  "srcAsset": "Flip",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 1000n,
}
`;

exports[`openSwapDepositChannel creates channel with ccmParams and stores it in the database 1`] = `
[
  [
    {
      "ccmParams": {
        "gasBudget": "125000",
        "message": "0xdeadc0de",
      },
      "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
      "destAsset": "USDC",
      "destChain": "Ethereum",
      "expectedDepositAmount": "10101010",
      "srcAsset": "FLIP",
      "srcChain": "Ethereum",
    },
    {
      "url": "",
    },
    "perseverance",
  ],
]
`;

exports[`openSwapDepositChannel creates channel with ccmParams and stores it in the database 2`] = `
{
  "brokerCommissionBps": 0,
  "ccmGasBudget": "125000",
  "ccmMessage": "0xdeadc0de",
  "channelId": 909n,
  "createdAt": Any<ClockDate>,
  "depositAddress": "address",
  "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
  "destAsset": "Usdc",
  "estimatedExpiryAt": 2023-11-09T12:55:00.000Z,
  "expectedDepositAmount": "10101010",
  "expiryBlock": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 123,
  "maxBoostFeeBps": 0,
  "openedThroughBackend": true,
  "openingFeePaid": "10",
  "srcAsset": "Flip",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 1000n,
}
`;
